fixed sideboard bleeding out issue

--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ main h3 {
 .sideBoard {
     display: grid;
     gap: 20px;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: auto auto;
     overflow: hidden;
 }
 
